# timelog

./: .env.example  .gitignore  CHANGELOG.md  README.md  accounts.md  install.ps1  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
timelog/: __init__.py  __main__.py  auth.py  cli.py  config.py  db.py  mapper.py  models.py  notify.py  outlook.py  sap.py  scheduler.py  triggers.py
